--- a/src/java/Bundle.properties
+++ b/src/java/Bundle.properties
@@ -1,20 +1,20 @@
-PersistenceErrorOccured=A persistence error occurred.
-Create=Create
-View=View
-Edit=Edit
-Delete=Delete
-Close=Close
-Cancel=Cancel
-Save=Save
-SelectOneMessage=Select One...
-Home=Home
-Maintenance=Maintenance
+PersistenceErrorOccured=Un error de Persistencia ha Ocurrido
+Create=Nuevo
+View=Ver
+Edit=Editar
+Delete=Eliminar
+Close=Cerrar
+Cancel=Cancelar
+Save=Guardar
+SelectOneMessage=Seleccione uno...
+Home=Pagina Principal
+Maintenance=Mantenimiento
 AppName=GimProject
 
-ClienteCreated=Cliente was successfully created.
-ClienteUpdated=Cliente was successfully updated.
-ClienteDeleted=Cliente was successfully deleted.
-CreateClienteTitle=Create New Cliente
+ClienteCreated=Cliente creado satisfactoriamente.
+ClienteUpdated=Cliente actualizado satisfactoriamente.
+ClienteDeleted=Cliente eliminado satisfactoriamente.
+CreateClienteTitle=Crear nuevo Cliente
 CreateClienteSaveLink=Save
 CreateClienteShowAllLink=Show All Cliente Items
 CreateClienteIndexLink=Index
@@ -24,26 +24,26 @@ CreateClienteTitle_idCliente=IdCliente
 CreateClienteLabel_foto=Foto:
 CreateClienteTitle_foto=Foto
 CreateClienteLabel_nombres=Nombres:
-CreateClienteRequiredMessage_nombres=The Nombres field is required.
+CreateClienteRequiredMessage_nombres=El campo Nombre es obligatorio
 CreateClienteTitle_nombres=Nombres
 CreateClienteLabel_apellidos=Apellidos:
-CreateClienteRequiredMessage_apellidos=The Apellidos field is required.
+CreateClienteRequiredMessage_apellidos=El campo Apellidos es obligatorio
 CreateClienteTitle_apellidos=Apellidos
-CreateClienteLabel_terminoSuscripcion=TerminoSuscripcion:
-CreateClienteRequiredMessage_terminoSuscripcion=The TerminoSuscripcion field is required.
-CreateClienteTitle_terminoSuscripcion=TerminoSuscripcion
-CreateClienteLabel_identificacion=Identificacion:
-CreateClienteRequiredMessage_identificacion=The Identificacion field is required.
+CreateClienteLabel_terminoSuscripcion=Termino de Suscripcion:
+CreateClienteRequiredMessage_terminoSuscripcion=El campo termino de suscripcion es obligatorio
+CreateClienteTitle_terminoSuscripcion=Termino de Suscripcion
+CreateClienteLabel_identificacion=Identificaci\u00f3n:
+CreateClienteRequiredMessage_identificacion=El campo identificacion es obligatorio
 CreateClienteTitle_identificacion=Identificacion
-CreateClienteLabel_direccion=Direccion:
-CreateClienteRequiredMessage_direccion=The Direccion field is required.
+CreateClienteLabel_direccion=Direcci\u00f3n:
+CreateClienteRequiredMessage_direccion=El campo direccion es obligatorio
 CreateClienteTitle_direccion=Direccion
 CreateClienteLabel_telefono=Telefono:
-CreateClienteRequiredMessage_telefono=The Telefono field is required.
+CreateClienteRequiredMessage_telefono=El campo telefono es obligatorio
 CreateClienteTitle_telefono=Telefono
 CreateClienteLabel_estado=Estado:
 CreateClienteTitle_estado=Estado
-EditClienteTitle=Edit Cliente
+EditClienteTitle=Editar Cliente
 EditClienteSaveLink=Save
 EditClienteViewLink=View
 EditClienteShowAllLink=Show All Cliente Items
