--- a/src/java/Bundle.properties
+++ b/src/java/Bundle.properties
@@ -125,7 +125,7 @@ CreateSuscripcionRequiredMessage_idSuscripcion=The IdSuscripcion field is requir
 CreateSuscripcionTitle_idSuscripcion=IdSuscripcion
 CreateSuscripcionLabel_fechaInicio=Fecha de Inicio:
 CreateSuscripcionTitle_fechaInicio=FechaInicio
-CreateSuscripcionLabel_fechaFin=FechaFin:
+CreateSuscripcionLabel_fechaFin=Fecha de Finalizaci\u00f3n:
 CreateSuscripcionTitle_fechaFin=FechaFin
 CreateSuscripcionLabel_estado=Estado:
 CreateSuscripcionTitle_estado=Estado
@@ -188,7 +188,7 @@ CreateUsuarioLabel_idUsuario=IdUsuario:
 CreateUsuarioRequiredMessage_idUsuario=The IdUsuario field is required.
 CreateUsuarioTitle_idUsuario=IdUsuario
 CreateUsuarioLabel_nombreUsuario=NombreUsuario:
-CreateUsuarioRequiredMessage_nombreUsuario=The NombreUsuario field is required.
+CreateUsuarioRequiredMessage_nombreUsuario=El campo Nombre Usuario es obligatorio
 CreateUsuarioTitle_nombreUsuario=NombreUsuario
 CreateUsuarioLabel_clave=Clave:
 CreateUsuarioTitle_clave=Clave
