--- a/src/java/Bundle.properties
+++ b/src/java/Bundle.properties
@@ -234,3 +234,4 @@ ListUsuarioTitle_idUsuario=IdUsuario
 ListUsuarioTitle_nombreUsuario=NombreUsuario
 ListUsuarioTitle_clave=Clave
 ListUsuarioTitle_estado=Estado
+ListItemsByFechaFin=Suscripciones pr\u00f3ximas a vencerse
