--- a/src/java/Bundle.properties
+++ b/src/java/Bundle.properties
@@ -54,29 +54,29 @@ EditClienteTitle_idCliente=IdCliente
 EditClienteLabel_foto=Foto:
 EditClienteTitle_foto=Foto
 EditClienteLabel_nombres=Nombres:
-EditClienteRequiredMessage_nombres=The Nombres field is required.
+EditClienteRequiredMessage_nombres=El campo Nombres es obligatorio
 EditClienteTitle_nombres=Nombres
 EditClienteLabel_apellidos=Apellidos:
-EditClienteRequiredMessage_apellidos=The Apellidos field is required.
+EditClienteRequiredMessage_apellidos=El campo Apellidos es obligatorio
 EditClienteTitle_apellidos=Apellidos
 EditClienteLabel_terminoSuscripcion=TerminoSuscripcion:
-EditClienteRequiredMessage_terminoSuscripcion=The TerminoSuscripcion field is required.
-EditClienteTitle_terminoSuscripcion=TerminoSuscripcion
+EditClienteRequiredMessage_terminoSuscripcion=El campo termino de suscripcion es obligaorio
+EditClienteTitle_terminoSuscripcion=Termino de Suscripcion
 EditClienteLabel_identificacion=Identificacion:
-EditClienteRequiredMessage_identificacion=The Identificacion field is required.
+EditClienteRequiredMessage_identificacion=El campo identificacion es obligatorio
 EditClienteTitle_identificacion=Identificacion
-EditClienteLabel_direccion=Direccion:
-EditClienteRequiredMessage_direccion=The Direccion field is required.
-EditClienteTitle_direccion=Direccion
+EditClienteLabel_direccion=Direcci\u00f3n:
+EditClienteRequiredMessage_direccion=El campo derecci\u00f3n es obligatorio
+EditClienteTitle_direccion=Direcci\u00f3n
 EditClienteLabel_telefono=Telefono:
-EditClienteRequiredMessage_telefono=The Telefono field is required.
+EditClienteRequiredMessage_telefono=El campo telefono es obligatorio
 EditClienteTitle_telefono=Telefono
 EditClienteLabel_estado=Estado:
 EditClienteTitle_estado=Estado
 ViewClienteTitle=View
 ViewClienteDestroyLink=Destroy
 ViewClienteEditLink=Edit
-ViewClienteCreateLink=Create New Cliente
+ViewClienteCreateLink=Crear nuevo Cliente
 ViewClienteShowAllLink=Show All Cliente Items
 ViewClienteIndexLink=Index
 ViewClienteLabel_idCliente=IdCliente:
@@ -87,36 +87,36 @@ ViewClienteLabel_nombres=Nombres:
 ViewClienteTitle_nombres=Nombres
 ViewClienteLabel_apellidos=Apellidos:
 ViewClienteTitle_apellidos=Apellidos
-ViewClienteLabel_terminoSuscripcion=TerminoSuscripcion:
-ViewClienteTitle_terminoSuscripcion=TerminoSuscripcion
-ViewClienteLabel_identificacion=Identificacion:
-ViewClienteTitle_identificacion=Identificacion
-ViewClienteLabel_direccion=Direccion:
-ViewClienteTitle_direccion=Direccion
+ViewClienteLabel_terminoSuscripcion=Termino de Suscripcion:
+ViewClienteTitle_terminoSuscripcion=Termino de Suscripcion
+ViewClienteLabel_identificacion=Identificaci\u00f3n:
+ViewClienteTitle_identificacion=Identificaci\u00f3n
+ViewClienteLabel_direccion=Direcci\u00f3n:
+ViewClienteTitle_direccion=Direcci\u00f3n
 ViewClienteLabel_telefono=Telefono:
 ViewClienteTitle_telefono=Telefono
 ViewClienteLabel_estado=Estado:
 ViewClienteTitle_estado=Estado
 ListClienteTitle=List
-ListClienteEmpty=(No Cliente Items Found)
+ListClienteEmpty=No hay clientes guardados
 ListClienteDestroyLink=Destroy
 ListClienteEditLink=Edit
 ListClienteViewLink=View
-ListClienteCreateLink=Create New Cliente
+ListClienteCreateLink=Crear nuevo Cliente
 ListClienteIndexLink=Index
 ListClienteTitle_idCliente=IdCliente
 ListClienteTitle_foto=Foto
 ListClienteTitle_nombres=Nombres
 ListClienteTitle_apellidos=Apellidos
-ListClienteTitle_terminoSuscripcion=TerminoSuscripcion
-ListClienteTitle_identificacion=Identificacion
-ListClienteTitle_direccion=Direccion
+ListClienteTitle_terminoSuscripcion=Termino de Suscripcion
+ListClienteTitle_identificacion=Identificaci\u00f3n
+ListClienteTitle_direccion=Direcci\u00f3n
 ListClienteTitle_telefono=Telefono
 ListClienteTitle_estado=Estado
-SuscripcionCreated=Suscripcion was successfully created.
-SuscripcionUpdated=Suscripcion was successfully updated.
-SuscripcionDeleted=Suscripcion was successfully deleted.
-CreateSuscripcionTitle=Create New Suscripcion
+SuscripcionCreated=Suscripcion creada satisfactoriamente.
+SuscripcionUpdated=Suscripcion actualizada satisfactoriamente.
+SuscripcionDeleted=Suscripcion eliminada satisfactoriamente.
+CreateSuscripcionTitle=Crear nueva suscripcion
 CreateSuscripcionSaveLink=Save
 CreateSuscripcionShowAllLink=Show All Suscripcion Items
 CreateSuscripcionIndexLink=Index
@@ -124,12 +124,12 @@ CreateSuscripcionLabel_idSuscripcion=IdSuscripcion:
 CreateSuscripcionRequiredMessage_idSuscripcion=The IdSuscripcion field is required.
 CreateSuscripcionTitle_idSuscripcion=IdSuscripcion
 CreateSuscripcionLabel_fechaInicio=Fecha de Inicio:
-CreateSuscripcionTitle_fechaInicio=FechaInicio
+CreateSuscripcionTitle_fechaInicio=Fecha de Inicio
 CreateSuscripcionLabel_fechaFin=Fecha de Finalizaci\u00f3n:
-CreateSuscripcionTitle_fechaFin=FechaFin
+CreateSuscripcionTitle_fechaFin=Fecha de Finalizacion
 CreateSuscripcionLabel_estado=Estado:
 CreateSuscripcionTitle_estado=Estado
-CreateSuscripcionLabel_clienteIdCliente=ClienteIdCliente:
+CreateSuscripcionLabel_clienteIdCliente=Nombre del Cliente:
 CreateSuscripcionRequiredMessage_clienteIdCliente=The ClienteIdCliente field is required.
 CreateSuscripcionTitle_clienteIdCliente=ClienteIdCliente
 EditSuscripcionTitle=Edit Suscripcion
@@ -140,43 +140,43 @@ EditSuscripcionIndexLink=Index
 EditSuscripcionLabel_idSuscripcion=IdSuscripcion:
 EditSuscripcionRequiredMessage_idSuscripcion=The IdSuscripcion field is required.
 EditSuscripcionTitle_idSuscripcion=IdSuscripcion
-EditSuscripcionLabel_fechaInicio=FechaInicio:
-EditSuscripcionTitle_fechaInicio=FechaInicio
-EditSuscripcionLabel_fechaFin=FechaFin:
-EditSuscripcionTitle_fechaFin=FechaFin
+EditSuscripcionLabel_fechaInicio=Fecha de Inicio:
+EditSuscripcionTitle_fechaInicio=Fecha de Inicio
+EditSuscripcionLabel_fechaFin=Fecha de Finalizaci\u00f3n:
+EditSuscripcionTitle_fechaFin=Fecha de Finalizaci\u00f3n
 EditSuscripcionLabel_estado=Estado:
 EditSuscripcionTitle_estado=Estado
-EditSuscripcionLabel_clienteIdCliente=ClienteIdCliente:
-EditSuscripcionRequiredMessage_clienteIdCliente=The ClienteIdCliente field is required.
-EditSuscripcionTitle_clienteIdCliente=ClienteIdCliente
+EditSuscripcionLabel_clienteIdCliente=Nombre del cliente:
+EditSuscripcionRequiredMessage_clienteIdCliente=El nombre del cliente es requerido
+EditSuscripcionTitle_clienteIdCliente=Nombre del cliente
 ViewSuscripcionTitle=View
 ViewSuscripcionDestroyLink=Destroy
 ViewSuscripcionEditLink=Edit
-ViewSuscripcionCreateLink=Create New Suscripcion
+ViewSuscripcionCreateLink=Crear nueva suscripcion 
 ViewSuscripcionShowAllLink=Show All Suscripcion Items
 ViewSuscripcionIndexLink=Index
 ViewSuscripcionLabel_idSuscripcion=IdSuscripcion:
 ViewSuscripcionTitle_idSuscripcion=IdSuscripcion
-ViewSuscripcionLabel_fechaInicio=FechaInicio:
-ViewSuscripcionTitle_fechaInicio=FechaInicio
-ViewSuscripcionLabel_fechaFin=FechaFin:
-ViewSuscripcionTitle_fechaFin=FechaFin
+ViewSuscripcionLabel_fechaInicio=Fecha de Inicio:
+ViewSuscripcionTitle_fechaInicio=Fecha de Inicio
+ViewSuscripcionLabel_fechaFin=Fecha de Finalizaci\u00f3n:
+ViewSuscripcionTitle_fechaFin=Fecha de Finalizacion
 ViewSuscripcionLabel_estado=Estado:
 ViewSuscripcionTitle_estado=Estado
-ViewSuscripcionLabel_clienteIdCliente=ClienteIdCliente:
-ViewSuscripcionTitle_clienteIdCliente=ClienteIdCliente
+ViewSuscripcionLabel_clienteIdCliente=Nombre del cliente:
+ViewSuscripcionTitle_clienteIdCliente=Nombre del Cliente
 ListSuscripcionTitle=List
-ListSuscripcionEmpty=(No Suscripcion Items Found)
+ListSuscripcionEmpty=No hay suscripciones almacenadas!
 ListSuscripcionDestroyLink=Destroy
 ListSuscripcionEditLink=Edit
 ListSuscripcionViewLink=View
-ListSuscripcionCreateLink=Create New Suscripcion
+ListSuscripcionCreateLink=Crear nueva suscripcion
 ListSuscripcionIndexLink=Index
 ListSuscripcionTitle_idSuscripcion=IdSuscripcion
-ListSuscripcionTitle_fechaInicio=FechaInicio
-ListSuscripcionTitle_fechaFin=FechaFin
+ListSuscripcionTitle_fechaInicio=Fecha de Inicio
+ListSuscripcionTitle_fechaFin=Fecha de Finalizaci\u00f3n 
 ListSuscripcionTitle_estado=Estado
-ListSuscripcionTitle_clienteIdCliente=ClienteIdCliente
+ListSuscripcionTitle_clienteIdCliente=Nombre del cliente
 UsuarioCreated=Usuario was successfully created.
 UsuarioUpdated=Usuario was successfully updated.
 UsuarioDeleted=Usuario was successfully deleted.
