--- a/src/java/Bundle.properties
+++ b/src/java/Bundle.properties
@@ -11,6 +11,7 @@ Home=Pagina Principal
 Maintenance=Mantenimiento
 AppName=GimProject
 
+ClienteNotCreated=Fallo al crear cliente.
 ClienteCreated=Cliente creado satisfactoriamente.
 ClienteUpdated=Cliente actualizado satisfactoriamente.
 ClienteDeleted=Cliente eliminado satisfactoriamente.
