--- a/src/java/Bundle.properties
+++ b/src/java/Bundle.properties
@@ -98,8 +98,8 @@ ViewClienteLabel_telefono=Telefono:
 ViewClienteTitle_telefono=Telefono
 ViewClienteLabel_estado=Estado:
 ViewClienteTitle_estado=Estado
-ListClienteTitle=List
-ListClienteEmpty=No hay clientes guardados
+ListClienteTitle=Listado de Clientes
+ListClienteEmpty=No hay clientes almacenados!
 ListClienteDestroyLink=Destroy
 ListClienteEditLink=Edit
 ListClienteViewLink=View
@@ -166,7 +166,7 @@ ViewSuscripcionLabel_estado=Estado:
 ViewSuscripcionTitle_estado=Estado
 ViewSuscripcionLabel_clienteIdCliente=Nombre del cliente:
 ViewSuscripcionTitle_clienteIdCliente=Nombre del Cliente
-ListSuscripcionTitle=List
+ListSuscripcionTitle=Listado de suscripciones
 ListSuscripcionEmpty=No hay suscripciones almacenadas!
 ListSuscripcionDestroyLink=Destroy
 ListSuscripcionEditLink=Edit
@@ -224,8 +224,8 @@ ViewUsuarioLabel_clave=Clave:
 ViewUsuarioTitle_clave=Clave
 ViewUsuarioLabel_estado=Estado:
 ViewUsuarioTitle_estado=Estado
-ListUsuarioTitle=List
-ListUsuarioEmpty=(No Usuario Items Found)
+ListUsuarioTitle=Listado de usuarios
+ListUsuarioEmpty=No hay usuarios Almacenados!
 ListUsuarioDestroyLink=Destroy
 ListUsuarioEditLink=Edit
 ListUsuarioViewLink=View
@@ -236,3 +236,4 @@ ListUsuarioTitle_nombreUsuario=NombreUsuario
 ListUsuarioTitle_clave=Clave
 ListUsuarioTitle_estado=Estado
 ListItemsByFechaFin=Suscripciones pr\u00f3ximas a vencerse
+HomeListEmpty=No hay usuarios cuya suscripci\u00f3n venza hoy!
