--- a/src/java/Bundle.properties
+++ b/src/java/Bundle.properties
@@ -193,6 +193,9 @@ CreateUsuarioRequiredMessage_nombreUsuario=El campo Nombre Usuario es obligatori
 CreateUsuarioTitle_nombreUsuario=NombreUsuario
 CreateUsuarioLabel_clave=Clave:
 CreateUsuarioTitle_clave=Clave
+CreateUsuarioLabel_correo=Correo:
+CreateUsuarioRequiredMessage_correo=El campo correo es obligatorio
+CreateUsuarioTitle_correo=correo
 CreateUsuarioLabel_estado=Estado:
 CreateUsuarioTitle_estado=Estado
 EditUsuarioTitle=Edit Usuario
