--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,6 +31,8 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
 file.reference.commons-codec-1.9.jar=lib\\commons-codec-1.9.jar
+file.reference.commons-fileupload-1.3.2.jar=lib\\commons-fileupload-1.3.2.jar
+file.reference.commons-io-2.5.jar=lib\\commons-io-2.5.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -46,7 +48,9 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${libs.primefaces.classpath}:\
-    ${file.reference.commons-codec-1.9.jar}
+    ${file.reference.commons-codec-1.9.jar}:\
+    ${file.reference.commons-io-2.5.jar}:\
+    ${file.reference.commons-fileupload-1.3.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
