--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -26,27 +26,25 @@
         <welcome-file>faces/index.xhtml</welcome-file>
     </welcome-file-list>
     <filter>
-        <filter-name>PrimeFaces FileUpload Filter</filter-name>
+        <filter-name>Primefaces Upload Filter</filter-name>
         <filter-class>org.primefaces.webapp.filter.FileUploadFilter</filter-class>
+        <init-param>
+            <param-name>thresholdSize</param-name>
+            <param-value>512000</param-value>
+        </init-param>
+        <init-param>
+            <param-name>uploadDirectory</param-name>
+            <param-value>C:\CT1\ImagenesPrimefaces</param-value>
+        </init-param>
     </filter>
     <filter-mapping>
-        <filter-name>PrimeFaces FileUpload Filter</filter-name>
+        <filter-name>Primefaces Upload Filter</filter-name>
         <servlet-name>Faces Servlet</servlet-name>
     </filter-mapping>
-    
-    <servlet>
-        <description></description>
-        <display-name>DisplayImage</display-name>
-        <servlet-name>DisplayImage</servlet-name>
-        <servlet-class>beans.DisplayImage</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>DisplayImage</servlet-name>
-        <url-pattern>/DisplayImage</url-pattern>
-    </servlet-mapping>
     
     <context-param>
         <param-name>primefaces.FONT_AWESOME</param-name>
         <param-value>true</param-value>
     </context-param>
+    
 </web-app>
