--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,6 +33,7 @@ excludes=
 file.reference.commons-codec-1.9.jar=lib\\commons-codec-1.9.jar
 file.reference.commons-fileupload-1.3.2.jar=lib\\commons-fileupload-1.3.2.jar
 file.reference.commons-io-2.5.jar=lib\\commons-io-2.5.jar
+file.reference.primefaces-5.1.jar=lib\\primefaces-5.1.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -47,10 +48,10 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${libs.primefaces.classpath}:\
     ${file.reference.commons-codec-1.9.jar}:\
     ${file.reference.commons-io-2.5.jar}:\
-    ${file.reference.commons-fileupload-1.3.2.jar}
+    ${file.reference.commons-fileupload-1.3.2.jar}:\
+    ${file.reference.primefaces-5.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
