--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -27,17 +27,20 @@
     </welcome-file-list>
     
     <filter>
-        <filter-name>primeFacesFileUploadFilter</filter-name>
+        <filter-name>PrimeFaces FileUpload Filter</filter-name>
         <filter-class>org.primefaces.webapp.filter.FileUploadFilter</filter-class>
         <init-param>
             <param-name>thresholdSize</param-name>
             <param-value>512000</param-value>
         </init-param>
-        
+        <init-param>
+            <param-name>uploadDirectory</param-name>
+            <param-value>C:\Users\cristian.tovar\Documents\NetBeansProjects\GimProject\build\web\resources\img</param-value>
+        </init-param>
     </filter>
     <filter-mapping>
-         <filter-name>primeFacesFileUploadFilter</filter-name>
-    <servlet-name>Faces Servlet</servlet-name>
+        <filter-name>PrimeFaces FileUpload Filter</filter-name>
+        <servlet-name>Faces Servlet</servlet-name>
     </filter-mapping>
     
     <context-param>
