--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -25,25 +25,7 @@
     <welcome-file-list>
         <welcome-file>faces/index.xhtml</welcome-file>
     </welcome-file-list>
-    
-    <!-- <filter>
-        <filter-name>PrimeFaces FileUpload Filter</filter-name>
-        <filter-class>org.primefaces.webapp.filter.FileUploadFilter</filter-class>
-        <init-param>
-            <param-name>thresholdSize</param-name>
-            <param-value>512000</param-value>
-        </init-param>
-        <init-param>
-            <param-name>uploadDirectory</param-name>
-            <param-value>C:\Users\cristian.tovar\Documents\NetBeansProjects\GimProject\build\web\resources\img</param-value>
-        </init-param>
-    </filter>
-    <filter-mapping>
-        <filter-name>PrimeFaces FileUpload Filter</filter-name>
-        <servlet-name>Faces Servlet</servlet-name>
-    </filter-mapping>-->
-    
-    <!-- -->   
+
     <filter>
         <filter-name>PrimeFaces FileUpload Filter</filter-name>
         <filter-class>org.primefaces.webapp.filter.FileUploadFilter</filter-class>
@@ -61,7 +43,6 @@
         <filter-name>PrimeFaces FileUpload Filter</filter-name>
         <servlet-name>Faces Servlet</servlet-name>
     </filter-mapping>
-    <!-- -->
     
     <context-param>
         <param-name>primefaces.FONT_AWESOME</param-name>
@@ -71,6 +52,11 @@
     <error-page>
         <exception-type>javax.ejb.EJBException</exception-type>
         <location>/Vistas/errors/errorPage.xhtml</location>
+    </error-page>
+    
+    <error-page>
+        <exception-type>MailConnectException</exception-type>
+        <location>/Vistas/errors/errorCorreo.xhtml</location>
     </error-page>
     
 </web-app>
