--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -59,4 +59,9 @@
         <location>/Vistas/errors/errorCorreo.xhtml</location>
     </error-page>
     
+    <error-page>
+        <exception-type>com.mysql.jdbc.exceptions.jdbc4.MySQLNonTransientConnectionException</exception-type>
+        <location>/Vistas/errors/errorCorreo.xhtml</location>
+    </error-page>
+    
 </web-app>
