--- a/src/java/Bundle.properties
+++ b/src/java/Bundle.properties
@@ -114,6 +114,7 @@ ListClienteTitle_identificacion=Identificaci\u00f3n
 ListClienteTitle_direccion=Direcci\u00f3n
 ListClienteTitle_telefono=Telefono
 ListClienteTitle_estado=Estado
+Suscripcionnoterminada=La suscripcion no ha sido terminada.
 SuscripcionCreated=Suscripcion creada satisfactoriamente.
 SuscripcionUpdated=Suscripcion actualizada satisfactoriamente.
 SuscripcionDeleted=Suscripcion eliminada satisfactoriamente.
